--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -142,7 +142,9 @@
         background-color: #73F793;
         border-radius: 2%;     
         display: flex;
-		padding:10px;        
+		padding:10px;    
+		 z-index: 1000; /* Asegura que siempre esté por encima */
+        
     }
 
     .whatsapp-button:hover {
