--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -139,7 +139,7 @@
 	position: fixed;
 	bottom: 20px;
 	right: 0px;
-	background-color: #00CCCC;
+	background-color: #0CC;
 	border-radius: 2%;
 	display: flex;
 	padding: 10px;
