--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -35,7 +35,7 @@
         input[type="number"] { width: 50px; border: 1px solid #ddd; border-radius: 5px; padding: 5px; }
         .shipping-info, .payment-info { margin-top: 10px; font-size: 16px; }
         .invalid { border: 2px solid red; }
-        .search-bar { margin-bottom: 20px; float: right; }
+        .search-bar { margin-bottom: 0px; float: right; }
         .section { margin-bottom: 20px; }
         .section h2 { margin-bottom: 10px; }
         .section div { display: none flex-wrap: wrap; gap: 10px; }
@@ -182,15 +182,17 @@
 <div class="responsive-text">
     <!--<span>👤 Ingresar</span>-->  
     <a href="https://wa.me/2224606907" style="text-decoration: none; color: black;">
-        <span><img src="https://static.xx.fbcdn.net/assets/?revision=1431132240730458&name=Illustrations-Get-Started&density=1" width="20px"> Escríbenos</span>
+        <span><img src="https://static.xx.fbcdn.net/assets/?revision=1431132240730458&name=Illustrations-Get-Started&density=1" width="20px"></span>
     </a> 
     <a href="tel:+522224606907" style="text-decoration: none; color: black;">
-        <span>📱 Llamar</span>
+        <span>📱 </span>
     </a>  
     <a href="mailto:contacto.quetzalarte@gmail.com" style="text-decoration: none; color: black;">
-        <span>✉️ Email</span> 
+        <span>✉️ </span> 
     </a> 
-    
+    <div class="search-bar"> 🔎
+    <input type="text" id="searchInput" placeholder="Buscar productos..." onkeyup="filterProducts()">
+  </div>
   </div>
 </div>
 
@@ -203,10 +205,9 @@
 
 <div style="padding:10px;">
   Bienvenid@ a nuestra tienda en línea. 😊 Aquí puedes comprar o cotizar  tu pedido fácilmente
-  <div class="search-bar"> 🔎
-    <input type="text" id="searchInput" placeholder="Buscar productos..." onkeyup="filterProducts()">
-  </div>
 </div>
+
+
 <span>
 <span class="cart-icon" onclick="toggleCart()">
 <!-- Ícono de carrito animado-->
