--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -137,13 +137,14 @@
 		
 		 .whatsapp-button {
 	position: fixed;
-	bottom: 20px;
+	top: 0px;
 	right: 0px;
 	background-color: #0CC;
 	border-radius: 2%;
 	display: flex;
 	padding: 10px;
-	z-index: 1000; /* Asegura que siempre esté por encima */        
+	z-index: 1000; /* Asegura que siempre esté por encima */
+	text-align:center;      
     }
 
     .whatsapp-button:hover {
