--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -144,7 +144,7 @@
 	display: flex;
 	padding: 10px;
 	z-index: 1000; /* Asegura que siempre esté por encima */
-	text-align:center;      
+	display:inline-block;    
     }
 
     .whatsapp-button:hover {
