--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -177,7 +177,7 @@
 
 <div style="text-align: center; background-color: #0CC; color: #FFF;  padding: 5px;"> Envíos Rápidos | Medios de pago favoritos | Meses sin intereses</div>
 
-<div  class="whatsapp-button" style="display:inline-block;">
+<div  class="whatsapp-button">
 
     <!--<span>👤 Ingresar</span>-->  
     <a href="https://wa.me/2224606907" style="text-decoration: none; color: black;">
@@ -189,7 +189,7 @@
     <a href="mailto:contacto.quetzalarte@gmail.com" style="text-decoration: none; color: black;">
         <span>✉️ </span> 
     </a> 
-    <div class="search-bar"> 🔎
+    <div class="search-bar" style="display:inline;"> 🔎
     <input type="text" id="searchInput" placeholder="Buscar productos..." onkeyup="filterProducts()">
 
   </div>
