--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -140,13 +140,14 @@
 	top: 0px;
 	right: 0px;
 	background-color: #0CC;
-	border-radius: 2%;
+	border-radius: 0%;
 	padding: 10px;
-	z-index: 1000; /* Asegura que siempre esté por encima */ 
+	z-index: 1000; /* Asegura que siempre esté por encima */
+	width:100%;
+	
     }
 
     .whatsapp-button:hover {
-        transform: scale(1.1);
 		z-index: 1500; /* Aumenta la prioridad al pasar el cursor */
     }
 	
@@ -180,8 +181,13 @@
 <div  class="whatsapp-button">
 
     <!--<span>👤 Ingresar</span>-->  
-    <a href="https://wa.me/2224606907" style="text-decoration: none; color: black;">
-        <span><img src="https://static.xx.fbcdn.net/assets/?revision=1431132240730458&name=Illustrations-Get-Started&density=1" width="20px"></span>
+<div style="display: inline; align-items: center; gap: 10px; text-align:center; padding-left:10px;  margin-left:100px; margin-bottom:0px;"> <img src="https://http2.mlstatic.com/storage/mshops-appearance-api/images/59/74762859/logo-2020070423454281300.png" alt="QuetzalArte Logo" style="width: 25px; height: auto;">
+ 
+</div>
+
+<span style="color:white;"> QuetzalArte.com
+
+<a href="https://wa.me/2224606907" style="text-decoration: none; color: black;"> <img src="https://static.xx.fbcdn.net/assets/?revision=1431132240730458&name=Illustrations-Get-Started&density=1" width="20px"></span>
     </a> 
     <a href="tel:+522224606907" style="text-decoration: none; color: black;">
         <span>📱 </span>
@@ -197,12 +203,10 @@
 
 
 
-<div style="display: flex; align-items: center; gap: 10px; text-align:center; padding-left:10px;"> <img src="https://http2.mlstatic.com/storage/mshops-appearance-api/images/59/74762859/logo-2020070423454281300.png" alt="QuetzalArte Logo" style="width: 50px; height: auto;">
-  <h1>QuetzalArte.com</h1>
-</div>
 
 
-<div style="padding:10px;">
+
+<div style="padding:10px; margin-top:20px;">
   Bienvenid@ a nuestra tienda en línea. 😊 Aquí puedes comprar o cotizar  tu pedido fácilmente
 </div>
 
