--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -187,8 +187,7 @@
 
 <span style="color:white;"> QuetzalArte.com
 
-<a href="https://wa.me/2224606907" style="text-decoration: none; color: black;"> <img src="https://static.xx.fbcdn.net/assets/?revision=1431132240730458&name=Illustrations-Get-Started&density=1" width="20px"></span>
-    </a> 
+<a href="https://wa.me/2224606907" style="text-decoration: none; color: black;"> <img src="https://static.xx.fbcdn.net/assets/?revision=1431132240730458&name=Illustrations-Get-Started&density=1" width="20px"></a> 
     <a href="tel:+522224606907" style="text-decoration: none; color: black;">
         <span>📱 </span>
     </a>  
