--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -35,7 +35,7 @@
         input[type="number"] { width: 50px; border: 1px solid #ddd; border-radius: 5px; padding: 5px; }
         .shipping-info, .payment-info { margin-top: 10px; font-size: 16px; }
         .invalid { border: 2px solid red; }
-        .search-bar { margin-bottom: 0px; float: right; }
+        .search-bar { padding-left:20px; float:right;}
         .section { margin-bottom: 20px; }
         .section h2 { margin-bottom: 10px; }
         .section div { display: none flex-wrap: wrap; gap: 10px; }
@@ -187,15 +187,20 @@
 
 <span style="color:white;"> QuetzalArte.com
 
-<a href="https://wa.me/2224606907" style="text-decoration: none; color: black;"> <img src="https://static.xx.fbcdn.net/assets/?revision=1431132240730458&name=Illustrations-Get-Started&density=1" width="20px"></a> 
+<a href="https://wa.me/2224606907" style="text-decoration: none; color: black;">
+        <span><img src="https://static.xx.fbcdn.net/assets/?revision=1431132240730458&name=Illustrations-Get-Started&density=1" width="20px"></span>
+    </a> 
     <a href="tel:+522224606907" style="text-decoration: none; color: black;">
-        <span>📱 </span>
+        <span>📱</span>
     </a>  
     <a href="mailto:contacto.quetzalarte@gmail.com" style="text-decoration: none; color: black;">
         <span>✉️ </span> 
     </a> 
-    <div class="search-bar" style="display:inline;"> 🔎
-    <input type="text" id="searchInput" placeholder="Buscar productos..." onkeyup="filterProducts()">
+    
+    
+    <div class="search-bar">
+   <input type="text" id="searchInput" placeholder=" 🔎 Buscar productos..." onkeyup="filterProducts()">
+
 
   </div>
 </div>
