--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -35,7 +35,7 @@
         input[type="number"] { width: 50px; border: 1px solid #ddd; border-radius: 5px; padding: 5px; }
         .shipping-info, .payment-info { margin-top: 10px; font-size: 16px; }
         .invalid { border: 2px solid red; }
-        .search-bar { padding-left:20px; float:right;}
+        .search-bar { padding-left:20px; float:right; padding-top:5px;}
         .section { margin-bottom: 20px; }
         .section h2 { margin-bottom: 10px; }
         .section div { display: none flex-wrap: wrap; gap: 10px; }
@@ -186,7 +186,7 @@
 
 <span style="color:white;"> QuetzalArte.com
 
-<a href="https://wa.me/2224606907" style="text-decoration: none; color: black;">
+<a href="https://wa.me/2224606907" style="text-decoration: none; color: black; margin-left:10px;">
         <span><img src="https://static.xx.fbcdn.net/assets/?revision=1431132240730458&name=Illustrations-Get-Started&density=1" width="20px"></span>
     </a> 
     <a href="tel:+522224606907" style="text-decoration: none; color: black;">
