--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -193,7 +193,7 @@
     
     
     <div class="search-bar">
-   <input type="text" id="searchInput" placeholder=" 🔎 Buscar productos..." onkeyup="filterProducts()" size="15">
+   <input type="text" id="searchInput" placeholder=" 🔎 Buscar productos..." onkeyup="filterProducts()" style="width:130px;">
 
 
   </div>
