--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -755,7 +755,7 @@ Precios vigentes del 01/Enero/2025 al 12/Diciembre/2025.
                 paymentDetails += `\nBanco: STP (Sistema de transferencias y pagos)\nNombre: Juan Carlos Bautista Bautista\nCLABE: 012650028760776683`;
             }
             let orderNumber = Math.floor(100000 + Math.random() * 900000);
-            let message = `Su pedido se ha registrado con éxito. Realice su pago a los siguientes datos.<br/>Una vez realizado su pago debe, espere a que lo contactemos.<br/>La verificación de la compra puede tardar de 15 minutos a 12 horas, dependiendo de su banco emisor o la tienda por la que realizó el pago.
+            let message = `<strong>Su pedido se ha registrado con éxito. Realice su pago a los siguientes datos.<br/>Una vez realizado su pago debe, espere a que lo contactemos.<br/>La verificación de la compra puede tardar de 15 minutos a 12 horas, dependiendo de su banco emisor o la tienda por la que realizó el pago.</strong>
 
 Solicitud del Pedido No: ${orderNumber}\n\n${cartDetails}\n\n${totalDetails}\n\nDatos de recepción de Envío:\n${shippingDetails}\n\n${paymentDetails}`;
             let detallesDiv = document.createElement('div');
